# dienhoatructuyen2424-be/cmd/swag/docs/swagger.yaml
@@ -59,18 +59,6 @@ definitions:
       oldpassword:
         type: string
     type: object
-  model.CustomerStateRequest:
-    properties:
-      state:
-        type: integer
-    type: object
-  model.CustomerVerifyInput:
-    properties:
-      verify_email:
-        type: string
-    required:
-    - verify_email
-    type: object
   model.FuncpackageInput:
     properties:
       role_max_number:
@@ -103,18 +91,6 @@ definitions:
         type: string
     required:
     - dateend
-    type: object
-  model.LoginCustomerInput:
-    properties:
-      password:
-        example: thaco@1234
-        type: string
-      username:
-        example: Admin
-        type: string
-    required:
-    - password
-    - username
     type: object
   model.LoginInput:
     properties:
@@ -189,41 +165,6 @@ definitions:
     - list_method
     - menu_id
     - role_id
-    type: object
-  model.UpdateInfoCustomerInput:
-    properties:
-      birthday:
-        type: string
-      gender:
-        type: integer
-      image:
-        type: string
-      mobile:
-        type: string
-      name:
-        type: string
-      number_plate:
-        type: string
-      parking_id:
-        type: string
-      payment_id:
-        type: string
-      username:
-        type: string
-    type: object
-  model.UpdatePasswordRegisterInput:
-    properties:
-      password:
-        type: string
-      token:
-        type: string
-    type: object
-  model.VerifyInput:
-    properties:
-      Verify_email:
-        type: string
-      verify_code:
-        type: string
     type: object
   response.ErrorResponseData:
     properties:
@@ -600,304 +541,6 @@ paths:
       summary: RefreshToken
       tags:
       - Authenticate
-  /customer/get_all_customer:
-    get:
-      consumes:
-      - application/json
-      description: API này trả về danh sách tất cả người dùng trong hệ thống
-      parameters:
-      - description: Từ khóa tìm kiếm
-        in: query
-        name: search
-        type: string
-      - description: Id của payment
-        in: query
-        name: payment
-        type: string
-      - description: 'Số trang (mặc định: 1)'
-        in: query
-        name: page
-        type: integer
-      - description: 'Số lượng mỗi trang (mặc định: 20)'
-        in: query
-        name: page_size
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      security:
-      - BearerAuth: []
-      - ApiKeyAuth: []
-      summary: Lấy danh sách tất cả người dùng
-      tags:
-      - Customer
-  /customer/get_customer_by_id/{id}:
-    get:
-      consumes:
-      - application/json
-      description: API này trả về khách hàng theo ID
-      parameters:
-      - description: ID khách hàng cần lấy
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      security:
-      - BearerAuth: []
-      - ApiKeyAuth: []
-      summary: Lấy khách hàng theo ID
-      tags:
-      - Customer
-  /customer/lock_and_unlock_customer/{id}:
-    post:
-      consumes:
-      - application/json
-      description: Khóa và mở khóa khách hàng
-      parameters:
-      - description: Customer ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: State request
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/model.CustomerStateRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      security:
-      - BearerAuth: []
-      - ApiKeyAuth: []
-      summary: Khóa và mở khóa khách hàng
-      tags:
-      - Customer
-  /customer/login:
-    post:
-      consumes:
-      - application/json
-      description: Login
-      parameters:
-      - description: payload
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/model.LoginCustomerInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      summary: Login
-      tags:
-      - Customer
-  /customer/logout:
-    post:
-      consumes:
-      - application/json
-      description: Logout
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      security:
-      - BearerAuth: []
-      summary: Logout
-      tags:
-      - Customer
-  /customer/refresh-token:
-    post:
-      consumes:
-      - application/json
-      description: RefreshToken
-      parameters:
-      - description: Refresh Token
-        in: header
-        name: RefreshToken
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      security:
-      - BearerAuth: []
-      summary: RefreshToken
-      tags:
-      - Customer
-  /customer/register:
-    post:
-      consumes:
-      - application/json
-      description: Đang ký người dùng khách hàng
-      parameters:
-      - description: payload
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/model.CustomerVerifyInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      summary: Đăng ký người dùng khách hàng
-      tags:
-      - Customer
-  /customer/update_customer_info/{id}:
-    put:
-      consumes:
-      - application/json
-      description: API cập nhật customer info dựa trên ID
-      parameters:
-      - description: Id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Customer info cần cập nhật
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/model.UpdateInfoCustomerInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      security:
-      - TokenKey: []
-      summary: Cập nhật customer info
-      tags:
-      - Customer
-  /customer/update_password_register:
-    post:
-      consumes:
-      - application/json
-      description: Thay đổi password
-      parameters:
-      - description: payload
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/model.UpdatePasswordRegisterInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      summary: Thay đổi password
-      tags:
-      - Customer
-  /customer/verify_otp:
-    post:
-      consumes:
-      - application/json
-      description: Xác thực OTP
-      parameters:
-      - description: payload
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/model.VerifyInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.ResponseData'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.ErrorResponseData'
-      summary: Xác thực OTP
-      tags:
-      - Customer
   /funcpackage/create_func_package:
     post:
       consumes:
