# dienhoatructuyen2424-be/internal/routers/customer/enter.go
@@ -1,5 +1,0 @@
-package customer
-
-type CustomerRouterGroup struct {
-	CustomerRouter
-}
